--- a/app/src/main/res/layout/layout_keyboard.xml
+++ b/app/src/main/res/layout/layout_keyboard.xml
@@ -136,7 +136,7 @@
             android:textColor="?android:textColorPrimary"
             android:textSize="26sp" />
 
-        <androidx.legacy.widget.Space
+        <Space
             android:id="@+id/keyboard_space"
             android:layout_width="0dp"
             android:layout_height="match_parent"
